# Quadro

./: Cargo.toml  GITHUB_PAGES_RU.md  README.md  build-web.ps1  build-web.sh
.github/workflows/: deploy-pages.yml
docs/: app.js  index.html  styles.css
src/: lib.rs
