[package]
name = "quadcopter_web_sim"
version = "0.1.0"
edition = "2021"
description = "3D web quadcopter simulator in Rust + WebAssembly"
license = "MIT"
repository = "https://github.com/your-name/quadcopter_web_sim"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
